clusters/managed/llm/langfuse/s3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langfuse-s3
  namespace: mgd-llm
  labels:
    app.kubernetes.io/name: s3
    app.kubernetes.io/instance: langfuse-app
    milano.app: langfuse
    milano.level: managed
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: s3
      app.kubernetes.io/instance: langfuse-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: s3
        app.kubernetes.io/instance: langfuse-app
        milano.app: langfuse
        milano.level: managed
    spec:
      containers:
        - name: minio
          image: bitnamilegacy/minio:2024.12.18-debian-12-r1
          imagePullPolicy: IfNotPresent
          ports:
            - name: minio-api
              containerPort: 9000
            - name: minio-console
              containerPort: 9001
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: minio-api
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: minio-api
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 150m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /bitnami/minio/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: langfuse-s3-data
