clusters/managed/llm/langfuse/s3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: langfuse-s3
  namespace: mgd-llm
  labels:
    app.kubernetes.io/name: s3
    app.kubernetes.io/instance: langfuse-app
    milano.app: langfuse
spec:
  selector:
    app.kubernetes.io/name: s3
    app.kubernetes.io/instance: langfuse-app
  ports:
    - name: minio-api
      port: 9000
      targetPort: minio-api
    - name: minio-console
      port: 9001
      targetPort: minio-console
